<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.dfki.asr</groupId>
    <artifactId>sparql-api-wrapper</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>12</maven.compiler.source>
        <maven.compiler.target>12</maven.compiler.target>
        <rdf4j.version>2.4.3</rdf4j.version>
    </properties>
    <name>sparql-api-wrapper</name>

    <dependencies>
        <dependency>
            <!-- Import dependency management from Spring Boot -->
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-dependencies</artifactId>
            <version>2.1.7.RELEASE</version>
            <type>pom</type>
            <scope>import</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>2.1.5.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
            <version>2.1.5.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <version>2.1.5.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.8</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.9.9</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
            <version>1.18.8</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.rdf4j</groupId>
            <artifactId>rdf4j-repository-sail</artifactId>
            <version>${rdf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.rdf4j</groupId>
            <artifactId>rdf4j-sail-memory</artifactId>
            <version>${rdf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.rdf4j</groupId>
            <artifactId>rdf4j-rio-rdfxml</artifactId>
            <version>${rdf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.eclipse.rdf4j</groupId>
            <artifactId>rdf4j-rio-turtle</artifactId>
            <version>${rdf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>com.taxonic.carml</groupId>
            <artifactId>carml-commons</artifactId>
            <version>0.2.3</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.taxonic.carml</groupId>
            <artifactId>carml-engine</artifactId>
            <version>0.2.3</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.taxonic.carml</groupId>
            <artifactId>carml-logical-source-resolver-csv</artifactId>
            <version>0.2.3</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.taxonic.carml</groupId>
            <artifactId>carml-logical-source-resolver-jsonpath</artifactId>
            <version>0.2.3</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.taxonic.carml</groupId>
            <artifactId>carml-logical-source-resolver-xpath</artifactId>
            <version>0.2.3</version>
            <type>jar</type>
        </dependency>
    </dependencies>
</project>
